static/css/style.css
/* Import fonts */
@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Piazzolla:wght@400;700&display=swap');

/* We begin by definining our REM setup. */
html{
  font-size: 14px;
}
/* All header elements use 'Bree Serif', all other text is 'Piazzolla' */

h1, h2, h3, h4, h5, h6 {
  font-family: 'Bree Serif', serif;
}
body{
  font-family: 'Piazzolla', serif;
  font-size: 1rem;
}
a{
  color: #000000;
}
a:hover{
  color: #c53618;
}

.dice-roller {
  color: #000000;
}
.dice-roller:hover {
  color: #c53618;
}
.jumbotron-bg{
  background-image: url(/static/img/cityscape.jpg);
  background-size: cover;
  color: #ff5c5c;
}
.jumbotron-char-bg{
  background-image: url(/static/img/wizard_wars.jpg);
  background-size: cover;
  color: #ff5c5c;
}
.footer-base{
  position: fixed;
  left: 0;
  bottom: 0;
  color: #000000;
  font-size: .8rem;
  width: 100%;
  padding: 1rem;
  text-align: center;
}
.card-margin{
  color: #000000;
  margin-right: 2rem;
}
/* Enhancing the readability of form-errors */
.errors{
  color: #ff5c5c;
  font-size: 1.5rem;
}

